--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-"name": "Makima-Bot-MD",
-"version": "2.0.5",
-"description": "La Bot Más Amorosa de todas",
+"name": "Megumin-Bot-MD",
+"version": "1.0.5",
+"description": "El Bot Más Explosivo De WhatsApp",
 "main": "index.js",
 "type": "module",
 "directories": {
@@ -16,16 +16,16 @@
 "eslint": "eslint .",
 "eslintfix": "eslint --fix ."
 },
-"homepage": "https://github.com/mantis-has/makima-",
+"homepage": "https://github.com/David-Chian/Megumin-Bot-MD",
 "author": {
-"name": "mantis-has"
+"name": "David-Chian"
 },
 "repository": {
 "type": "git",
-"url": "git+https://github.com/mantis-has/Makima-.git"
+"url": "git+https://github.com/David-Chian/Megumin-Bot-MD.git"
 },
 "bugs": {
-"url": "https://github.com/mantis-has/Makima/issues"
+"url": "https://github.com/David-Chian/Megumin-Bot-MD/issues"
 },
 "license": "GPL-3.0-or-later",
 "dependencies": {
